# vnext

./: .gitignore  PLAN.md  README.md  pyproject.toml  vnext_problem_breakdown.md
benchmarks/: README.md
benchmarks/photonics/: artifacts.json  clues.json
docs/: CODEX_HANDOFF.md  PROJECT_DOCTRINE.md  README.md  discord-api-spike.md  problem_tree.md  x-rate-limits.md
docs/research-frameworks/: 2026-03-22-mirofish-vnext-core-v1.md  2026-03-22-mirofish-vnext-reset-triage-v1.md
research/analysis/: 2026-03-19-aleabitoreddit-memory-replay-as-of-2026-01-21.md  2026-03-19-aleabitoreddit-memory-replay-stage-2-pre-2026-01-21-public-evidence.md  2026-03-19-aleabitoreddit-methods-archaeology-aaoi-lite-iqe-v1.md  2026-03-19-aleabitoreddit-methods-archaeology-cohr-poet-sive-v1.md  2026-03-19-aleabitoreddit-methods-archaeology-v1.md  2026-03-19-aleabitoreddit-photonics-replay-as-of-2025-12-22.md  2026-03-19-aleabitoreddit-photonics-replay-stage-2-pre-2025-12-22-public-evidence.md  2026-03-20-memory-sndk-historical-signal-calibration-v1.md  2026-03-25-lite-community-leads-v1.md  (+32 more)
scripts/: build_evidence_grounding_queue.py  build_grounded_photonics_graph.py  discord_spike_fetch_channels.py  discord_spike_fetch_messages.py  enrich_aleabitoreddit_archive.py  extract_archive_clue_candidates.py  extract_community_leads.py  extract_x_expression_context.py
tests/: test_archive_enrichment.py  test_clue_extraction.py  test_community_prospecting.py  test_discord_spike.py  test_grounded_photonics_graph.py  test_grounding_queue.py  test_loader.py  test_models.py  test_photonics_benchmark.py
(+27 files in other folders)
